--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.1.3+15
+version: 0.2.0+16
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -35,8 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_dotenv: ^5.0.2
-  http: ^0.13.3
-  flutter_riverpod: ^1.0.0-dev.7
+  http: ^0.13.5
+  flutter_riverpod: ^2.0.2
   substring_highlight: ^1.0.33
 
 dev_dependencies:
