--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.2.1+17
+version: 0.3.0+18
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.5
   flutter_riverpod: ^2.0.2
   substring_highlight: ^1.0.33
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
