--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.4.2+22
+version: 0.5.0+23
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -40,10 +40,15 @@ dependencies:
   substring_highlight: ^1.0.33
   url_launcher: ^6.1.10
   html: ^0.15.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_typeahead: ^4.3.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
