--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ version: 0.6.1+28
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
+  # sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
